--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         
          <ul>
              <li>
-                 <a href="https://www.linkedin.com/io/klemermonteiro" target="_blank">Linkedin</a>
+                 <a href="https://www.linkedin.com/io/klemermonteiro/" target="_blank">Linkedin</a>
              </li>
              <li>
-                 <a href="klemeragm.github.io/my-portfolio" target="_blank">My Portfolio</a>
+                 <a href="klemeragm.github.io/my-portfolio/" target="_blank">My Portfolio</a>
              </li>
              <li>
-                 <a href="https://github.com/klemeragm" target="_blank">GitHub</a>
+                 <a href="https://github.com/klemeragm/" target="_blank">GitHub</a>
              </li>
              <li>
-                 <a href="https://instagram.com/klemeragm" target="_blank">Instagram</a>
+                 <a href="https://instagram.com/klemeragm/" target="_blank">Instagram</a>
              </li>
              <li>
                  <a href="mailto:klemerm@gmail.com">Email</a>
              </li>
              <li>
-                 <a href="public/Resumé_KlemerMonteiro.pdf" alt="My resume in English version">My Résume</a>
+                 <a href="public/Resumé_KlemerMonteiro.pdf/" alt="My resume in English version">My Résume</a>
              </li>
          </ul>
           <footer>Feito por Klemer Monteiro</footer>
