Arrumado o css,e o E-mail na main

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                  <a href="https://instagram.com/klemeragm/" target="_blank">Instagram</a>
              </li>
              <li>
-                 <a href="mailto:klemerm@gmail.com">Email</a>
+                 <a href="mailto:klemerm@gmail.com">E-mail</a>
              </li>
              <li>
                  <a href="public/Resumé_KlemerMonteiro.pdf/" alt="My resume in English version">My Résume</a>
