--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> 
-    <title>Document</title>
+    <title>My Links - Klemer Monteiro</title>
 </head>
 <body>
     <div class="container">
-        <img src="images/avatar.png" alt="Foto de KLemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">
+        <img src="images/avatar.png" alt="Foto de Klemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">
             <h1>Klemer Monteiro</h1>
-         <p>IT Analyst with Data Specialists</p>
+         <p>IT Analysts & Data Specialists</p>
+          <session>
          <ul>
              <li>
                  <a href="https://www.linkedin.com/io/klemermonteiro/" target="_blank">Linkedin</a>
-             </li>
-             <li>
-                 <a href="klemeragm.github.io/my-portfolio/" target="_blank">My Portfolio</a>
              </li>
              <li>
                  <a href="https://github.com/klemeragm/" target="_blank">GitHub</a>
@@ -29,9 +27,10 @@
                  <a href="mailto:klemerm@gmail.com">E-mail</a>
              </li>
              <li>
-                 <a href="public/Resumé_KlemerMonteiro.pdf/" alt="My resume in English version">My Résume</a>
+                 <a href="public/Resume_KlemerMonteiro.pdf/" alt="My resume in English version">My Résume</a>
              </li>
          </ul>
+        </session>
           <footer>Feito por Klemer Monteiro</footer> 
     </div>    
 </body>
