--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="./css/style.css"> 
     <title>My Links - Klemer Monteiro</title>
 </head>
 <body>
@@ -15,13 +15,13 @@
           <session>
          <ul>
              <li>
-                 <a href="https://www.linkedin.com/io/klemermonteiro/" target="_blank">Linkedin</a>
+                 <a href="https://www.linkedin.com/io/klemermonteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
              </li>
              <li>
-                 <a href="https://github.com/klemeragm/" target="_blank">GitHub</a>
+                 <a href="https://github.com/klemeragm/" target="_blank" rel="noopener noreferrer">GitHub</a>
              </li>
              <li>
-                 <a href="https://instagram.com/klemeragm/" target="_blank">Instagram</a>
+                 <a href="https://instagram.com/klemeragm/" target="_blank" rel="noopener noreferrer">Instagram</a>
              </li>
              <li>
                  <a href="mailto:klemerm@gmail.com">E-mail</a>
