Add changes in links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <session>
          <ul>
              <li>
-                 <a href="https://www.linkedin.com/in/klemermonteiro/?locale=en" target="_blank" rel="noopener noreferrer">Linkedin</a>
+                 <a href="https://www.linkedin.com/in/klemermonteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
              </li>
              <li>
                  <a href="https://github.com/klemeragm/" target="_blank" rel="noopener noreferrer">GitHub</a>
