--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/style.css"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Import responsible settings-->
+    <link rel="stylesheet" type="text/css" href="./css/style.css"> <!--Import the styles  -->
     <title>My Links - Klemer Monteiro</title>
 </head>
-<body>
-    <div class="container">
-        <img src="images/avatar.png" alt="Foto de Klemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">
-            <h1>Klemer Monteiro</h1>
-         <p>IT Analysts & Data Specialists</p>
-          <session>
+<body> 
+    <nav> 
+    <div class="icon icon-night">
+    </div>
+    </nav>
+    <div class="container"> 
+        <img src="./images/avatar.png" alt="Foto de Klemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">    
+        <h1>Klemer Monteiro</h1>
+        <p>IT Analysts & Data Specialists</p>
+        <session>
          <ul>
              <li>
                  <a href="https://www.linkedin.com/in/klemermonteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
@@ -24,14 +28,17 @@
                  <a href="https://instagram.com/klemeragm/" target="_blank" rel="noopener noreferrer">Instagram</a>
              </li>
              <li>
-                 <a href="mailto:klemerm@gmail.com">E-mail</a>
+                 <a href="mailto:klemerm@gmail.com" target="_blank" rel="noopener noreferrer">E-mail</a>
              </li>
              <li>
-                 <a href="public/Resume_KlemerMonteiro.pdf/" alt="My resume in English version">My Résume</a>
+                 <a href="./public/Resume_KlemerMonteiro.pdf/" alt="My resume in English version">My Résume</a>
              </li>
          </ul>
         </session>
-          <footer>Feito por Klemer Monteiro</footer> 
-    </div>    
-</body>
+        <footer>
+        <a href="https://github.com/klemeragm/my-links/" class="footer" target="_blank" rel="noopener noreferrer">Feito por Klemer Monteiro</a>
+       </footer>
+    </div>
+    </body>
+    <script type="text/javascript" src="./js/app.js"></script> 
 </html>
