--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 <body> 
     <nav> 
-    <div class="icon icon-night">
+    <div>
+        <img id="icon" src="./images/day.svg" alt="imagem do icone">
     </div>
     </nav>
     <div class="container"> 
-        <img src="./images/avatar.png" alt="Foto de Klemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">    
+        <img class="my-photo" src="./images/avatar.png" alt="Foto de Klemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">    
         <h1>Klemer Monteiro</h1>
         <p>IT Analysts & Data Specialists</p>
         <session>
          <ul>
+           <!--  <li>
+                <a href="https://wa.me/+5524993105000?text=Olá, me chamo Klemer, trabalho com Tecnologia da Informação, identifique-se!" target="_blank">Whatsapp</a>
+            </li> -->
              <li>
                  <a href="https://www.linkedin.com/in/klemermonteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
              </li>
@@ -31,13 +35,13 @@
                  <a href="mailto:klemerm@gmail.com" target="_blank" rel="noopener noreferrer">E-mail</a>
              </li>
              <li>
-                 <a href="./public/Resume_KlemerMonteiro.pdf/" alt="My resume in English version">My Résume</a>
+                 <a href="public/Resume_KlemerMonteiro.pdf" alt="My resume in English version">My Résume</a>
              </li>
          </ul>
         </session>
         <footer>
         <a href="https://github.com/klemeragm/my-links/" class="footer" target="_blank" rel="noopener noreferrer">Feito por Klemer Monteiro</a>
-       </footer>
+       </footer><br>    
     </div>
     </body>
     <script type="text/javascript" src="./js/app.js"></script> 
