--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <img class="my-photo" src="./images/avatar.png" alt="Foto de Klemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">    
         <h1>Klemer Monteiro</h1>
         <p>IT Analysts & Data Specialists</p>
-        <session>
+        <section>
          <ul>
-           <!--  <li>
+           <!-- <li>
                 <a href="https://wa.me/+5524993105000?text=Olá, me chamo Klemer, trabalho com Tecnologia da Informação, identifique-se!" target="_blank">Whatsapp</a>
             </li> -->
              <li>
@@ -38,7 +38,7 @@
                  <a href="public/Resume_KlemerMonteiro.pdf" alt="My resume in English version">My Résume</a>
              </li>
          </ul>
-        </session>
+        </section>
         <footer>
         <a href="https://github.com/klemeragm/my-links/" class="footer" target="_blank" rel="noopener noreferrer">Feito por Klemer Monteiro</a>
        </footer><br>    
