--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container"> 
         <img class="my-photo" src="./images/avatar.png" alt="Foto de Klemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">    
         <h1>Klemer Monteiro</h1>
-        <p>IT Analysts & Data Specialists</p>
+        <p>Back-End Developer & IA Enthusiasts</p>
         <section>
          <ul>
              <li>
@@ -37,7 +37,7 @@
          </ul>
         </section>
         <footer>
-        <a href="https://github.com/klemeragm/my-links/" class="footer" target="_blank" rel="noopener noreferrer">Feito por Klemer Monteiro</a>
+        <a href="https://github.com/klemeragm/my-links/" class="footer" target="_blank" rel="noopener noreferrer">Made by Klemer Monteiro</a>
        </footer><br>    
     </div>
     </body>
