--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          </ul>
         </section>
         <footer>
-        <a href="https://github.com/klemeragm/my-links/" class="footer" target="_blank" rel="noopener noreferrer">Made by Klemer Monteiro</a>
+        <a href="https://github.com/klemeragm/my-links/" class="footer" target="_blank" rel="noopener noreferrer">Designed by Klemer Monteiro</a>
        </footer><br>    
     </div>
     </body>
