--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
              <li>
                  <a href="https://www.linkedin.com/in/klemermonteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
              </li>
+             <!-- <li>
+                <a href="https://wa.me/+5524..." target="_blank" rel="noopener noreferrer">Whatsapp</a>
+            </li>-->
              <li>
                  <a href="https://github.com/klemeragm/" target="_blank" rel="noopener noreferrer">GitHub</a>
              </li>
