--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                  <a href="https://www.linkedin.com/in/klemermonteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
              </li>
              <!-- <li>
-                <a href="https://wa.me/+5524..." target="_blank" rel="noopener noreferrer">Whatsapp</a>
+                <a href="https://wa.me/+5524...?text=Quer saber mais sobre meus projetos, por favor se identifique?" target="_blank" rel="noopener noreferrer">Whatsapp</a>
             </li>-->
              <li>
                  <a href="https://github.com/klemeragm/" target="_blank" rel="noopener noreferrer">GitHub</a>
@@ -35,7 +35,7 @@
                  <a href="mailto:klemerm@gmail.com" target="_blank" rel="noopener noreferrer">E-mail</a>
              </li>
              <li>
-                 <a href="public/Resume_KlemerMonteiro.pdf" alt="My resume in English version">My Résume</a>
+                 <a href="https://klemeragm.github.io/my-cv/" alt="My resume in English version">My Résume</a>
              </li>
          </ul>
         </section>
