--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                  <a href="mailto:klemerm@gmail.com" target="_blank" rel="noopener noreferrer">E-mail</a>
              </li>
              <li>
-                 <a href="https://klemeragm.github.io/my-cv/" alt="My resume in English version">My Résume</a>
+                 <a href="https://klemeragm.github.io/my-cv/" target="_blank" rel="noopener noreferrer" alt="My resume in English version">My Résume</a>
              </li>
          </ul>
         </section>
