update html and remove unnecessay files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
          <ul>
              <li>
-                 <a href="https://www.linkedin.com/in/klemermonteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
+                 <a href="https://www.linkedin.com/in/klemer-monteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
              </li>
              <!-- <li>
                 <a href="https://wa.me/+5524...?text=Quer saber mais sobre meus projetos, por favor se identifique?" target="_blank" rel="noopener noreferrer">Whatsapp</a>
