--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container"> 
         <img class="my-photo" src="./images/avatar.png" alt="Foto de Klemer,rapaz de meia altura de cabelo castanho, branco e olhos castanhos">    
         <h1>Klemer Monteiro</h1>
-        <p>Software Development Engineer | Generative AI</p>
+        <p> Machine Learning Engineer focused in Software Development Engineering | Generative AI</p>
         <section>
          <ul>
              <li>
