--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                  <a href="https://instagram.com/klemeragm/" target="_blank" rel="noopener noreferrer">Instagram</a>
              </li>
              <li>
+                 <a href=""https://wa.me/+5524993105000" target="_blank" rel="noopener noreferrer" alt="My link for Whatsapp">Whatsapp</a>
+             </li>
+             <li>
                  <a href="mailto:klemerm@gmail.com" target="_blank" rel="noopener noreferrer">E-mail</a>
              </li>
              <li>
