--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
              <li>
                  <a href="https://www.linkedin.com/in/klemer-monteiro/" target="_blank" rel="noopener noreferrer">Linkedin</a>
              </li>
-             <!-- <li>
-                <a href="https://wa.me/+5524...?text=Quer saber mais sobre meus projetos, por favor se identifique?" target="_blank" rel="noopener noreferrer">Whatsapp</a>
-            </li>-->
              <li>
                  <a href="https://github.com/klemeragm/" target="_blank" rel="noopener noreferrer">GitHub</a>
              </li>
@@ -32,7 +29,7 @@
                  <a href="https://instagram.com/klemeragm/" target="_blank" rel="noopener noreferrer">Instagram</a>
              </li>
              <li>
-                 <a href="https://wa.me/5524993105000" target="_blank" id="whatsapp" rel="noopener noreferrer" alt="My link for Whatsapp">Whatsapp</a>
+                 <a href="https://wa.me/5524993105000" target="_blank" rel="noopener noreferrer" alt="My link for Whatsapp">Whatsapp</a>
              </li>
              <li>
                  <a href="mailto:klemerm@gmail.com" target="_blank" rel="noopener noreferrer">E-mail</a>
